# real-estate-analytics

./: .gitignore  README.md  app.py  dependencies.txt  pyproject.toml
.streamlit/: config.toml
attached_assets/: Pasted-If-you-re-looking-to-build-an-AI-powered-application-with-recurring-revenue-potential-in-the-real-es-1742561254552.txt
examples/: integration_example.py  web_scraping_example.py
pages/: ad_performance_analytics.py  api_settings.py  india_market_insights.py  integration_settings.py  investment_calculator.py  lead_crawler.py  lead_management.py  market_insights.py  market_news.py  marketing_generator.py  messaging.py  property_analysis.py  property_matching.py  property_valuation.py  settings.py
utils/: ad_platform_api.py  ad_platforms.py  advanced_valuation.py  api_manager.py  data_processing.py  database.py  database_init.py  email_service.py  image_generator.py  integration.py  integration_helpers.py  prediction.py  real_estate_api.py  sms_service.py  social_media_manager.py  visualization.py  web_crawler.py  web_scraper.py  whatsapp_service.py
