[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "streamlit-folium>=0.24.0",
    "streamlit>=1.43.2",
    "trafilatura>=2.0.0",
    "folium>=0.19.5",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.39",
    "python-dotenv>=1.0.1",
    "pillow>=11.1.0",
    "twilio>=9.5.1",
    "beautifulsoup4>=4.13.3",
]
